--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/stars.css" />
   <link rel="stylesheet" href="css/main.css" />
 
 </head>
@@ -24,11 +23,12 @@
         <h2 class="h2 main-title">Lista rzeczy do zrobienia:</h2>
       </div>
 
-
-      <div class="card-deck d-flex justify-content-around">
-        <div class="col-lg-4">
-          <div class="card">
-           <button class="card-close" id="delete-card">×</button>
+      <!--CARD DECK-->
+      <div class="card-deck d-flex justify-content-around flex-wrap">
+        <!--CARD 001-->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card finished">
+            <button class="card-close" id="delete-card">×</button>
             <div class="card-title">Zacznij projekt</div>
             <div class="card-desc">Zacznij tworzyć to-do-list.</div>
             <div class="card-footer d-flex justify-content-between">
@@ -38,25 +38,61 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <!--CARD 002-->
+        <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card">
             <button class="card-close" id="delete-card">×</button>
             <div class="card-title w-100">Dokończ listę</div>
             <div class="card-desc">Dokończ listę to-do-list.</div>
             <div class="card-footer d-flex justify-content-between">
-              <button class="card-icon undone">X</button>
+              <button class="card-icon undone"></button>
               <div class="card-date">31.03.2011</div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4">
-          <div class="add-card" id="add-card"></div>
+        <!--ADD CARD-->
+        <div class="col-lg-4 col-sm-12">
+          <div class="add-card" id="add-card" onclick="showCreate()"></div>
         </div>
       </div>
-
     </div>
   </section>
+
+  <section id="create-card">
+    <div class="container">
+      <div class="row d-flex justify-content-center flex-wrap">
+
+        <div class="note-create">
+          <div class="create-close" id="noteCreateClose" onclick="closeCreate()">×</div>
+          <div class="col-lg-12 d-flex justify-content-center flex-wrap">
+            <h2 class="h2 create-title">Utwórz nową kartkę:</h2>
+            <div class="w-100"></div>
+            <h3 class="h3 create-desc">Wypełnij poniższe pola, aby utworzyć nową kartkę.</h3>
+          </div>
+
+          <div class="col-lg-12 d-flex justify-content-center flex-wrap">
+
+            <!-- NOTE TITLE -->
+            <label class="create-label" for="note-title">Tytuł notatki: </label>
+            <input type="text" id="note-title" name="tnote" class="create-input" required>
+            <div class="w-100"></div>
+
+            <!-- NOTE DESC -->
+            <label class="create-label" for="note-desc">Opis notatki: </label>
+            <textarea type="textarea" id="note-desc" name="tnote" class="create-textarea"></textarea>
+            <div class="w-100"></div>
+
+            <!-- NOTE DATE -->
+            <label class="create-label" for="note-date">Data utworzenia: </label>
+            <input type="date" id="note-date" name="tnote" class="create-date">
+            <input type="submit" id="note-date" value="Utwórz" name="tnote" class="create-button">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
