--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       </div>
 
       <!--CARD DECK-->
-      <div class="card-deck d-flex justify-content-around flex-wrap">
+      <div class="card-deck d-flex justify-content-start align-items-stretch flex-wrap" id="todoList">
         <!--CARD 001-->
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card finished">
-            <button class="card-close" id="delete-card">×</button>
+            <button class="card-close">×</button>
             <div class="card-title">Zacznij projekt</div>
             <div class="card-desc">Zacznij tworzyć to-do-list.</div>
-            <div class="card-footer d-flex justify-content-between">
+            <div class="card-footer">
               <button class="card-icon done"></button>
               <div class="card-date">21.03.2011</div>
             </div>
@@ -41,10 +41,10 @@
         <!--CARD 002-->
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card">
-            <button class="card-close" id="delete-card">×</button>
-            <div class="card-title w-100">Dokończ listę</div>
+            <button class="card-close">×</button>
+            <div class="card-title">Dokończ listę</div>
             <div class="card-desc">Dokończ listę to-do-list.</div>
-            <div class="card-footer d-flex justify-content-between">
+            <div class="card-footer">
               <button class="card-icon undone"></button>
               <div class="card-date">31.03.2011</div>
             </div>
@@ -52,8 +52,8 @@
         </div>
 
         <!--ADD CARD-->
-        <div class="col-lg-4 col-sm-12">
-          <div class="add-card" id="add-card" onclick="showCreate()"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card add-card" onclick="showCreate()">+</div>
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row d-flex justify-content-center flex-wrap">
 
-        <div class="note-create">
+        <div class="note-create" id="noteCreate">
           <div class="create-close" id="noteCreateClose" onclick="closeCreate()">×</div>
           <div class="col-lg-12 d-flex justify-content-center flex-wrap">
             <h2 class="h2 create-title">Utwórz nową kartkę:</h2>
@@ -72,21 +72,27 @@
           </div>
 
           <div class="col-lg-12 d-flex justify-content-center flex-wrap">
+            <form class="create-form" id="todoForm">
+              <!-- NOTE TITLE -->
+              <label class="create-label" for="note-title">Tytuł notatki: </label>
+              <input type="text" id="noteTitle" class="create-input" required>
+              <div class="w-100"></div>
 
-            <!-- NOTE TITLE -->
-            <label class="create-label" for="note-title">Tytuł notatki: </label>
-            <input type="text" id="note-title" name="tnote" class="create-input" required>
-            <div class="w-100"></div>
+              <!-- NOTE DESC -->
+              <label class="create-label" for="note-desc">Opis notatki: </label>
+              <textarea type="textarea" id="noteDesc" class="create-textarea" required></textarea>
+              <div class="w-100"></div>
 
-            <!-- NOTE DESC -->
-            <label class="create-label" for="note-desc">Opis notatki: </label>
-            <textarea type="textarea" id="note-desc" name="tnote" class="create-textarea"></textarea>
-            <div class="w-100"></div>
+              <!-- NOTE DATE-->
+              <!--
+              <label class="create-label" for="note-date">Data utworzenia: </label>
+              <input type="date" id="note-date" name="tnote" class="create-date">
+              <div class="w-100"></div>
+              -->
 
-            <!-- NOTE DATE -->
-            <label class="create-label" for="note-date">Data utworzenia: </label>
-            <input type="date" id="note-date" name="tnote" class="create-date">
-            <input type="submit" id="note-date" value="Utwórz" name="tnote" class="create-button">
+              <!-- SUBMIT BUTTON -->
+              <button type="submit" id="note-date" class="create-button">Utwórz</button>
+            </form>
           </div>
         </div>
       </div>
@@ -97,9 +103,10 @@
 
 
 
-  <script src="js/main.js"></script>
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
   <script>
