--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 
 <head>
   <!-- meta -->
-  <title>To do list</title>
+  <title>To do list - Patryk Kowalski</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Patryk Kowalski">
   <!-- font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&family=Roboto:wght@300;400;500;700&family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
   <!-- css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/main.css" />
 
@@ -41,13 +42,13 @@
 
         <!--CARD 002-->
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card">
+          <div class="card finished">
             <button class="card-close">×</button>
             <div class="card-title">Dokończ listę</div>
             <div class="card-desc">Dokończ listę to-do-list.</div>
             <div class="card-footer">
-              <button class="card-icon undone"></button>
-              <div class="card-date">31.08.2020</div>
+              <button class="card-icon done"></button>
+              <div class="card-date">28.08.2020</div>
             </div>
           </div>
         </div>
@@ -82,6 +83,7 @@
               <!-- NOTE DESC -->
               <label class="create-label" for="note-desc">Opis notatki: </label>
               <textarea type="textarea" id="noteDesc" class="create-textarea" required></textarea>
+
               <!--<div class="w-100"></div>-->
 
               <!-- NOTE DATE-->
@@ -100,16 +102,9 @@
     </div>
   </section>
 
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
-  <script>
-    AOS.init();
-
-  </script>
 </body>
 
 
